--- a/src/react-debugger-interface/src/components/Home.css
+++ b/src/react-debugger-interface/src/components/Home.css
@@ -14,8 +14,13 @@
   flex: 0.5
 }
 
-#test {
-  width: 100;
-  height: 100;
-  background-color: blue;
+.btn {
+  border: none;
+  background-color: inherit;
+  padding: 14px 28px;
+  font-size: 16px;
 }
+
+.btn:hover {background: #eee; color: black}
+
+.default {color: white;}
