--- a/src/react-debugger-interface/src/index.css
+++ b/src/react-debugger-interface/src/index.css
@@ -65,3 +65,8 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@font-face {
+  font-family: 'GammaOrionis';
+  src: local('GammaOrionis'), url('./assets/fonts/Gamma Orionis.otf') format('otf');
+}
